# connectomemapper3

./: .all-contributorsrc  .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  .zenodo.json  CHANGES  CITATION.cff  COPYRIGHT  DEVELOPER.rst  Dockerfile  LICENSE  MANIFEST  Makefile  README.md  README.rst  atom:--config-.txt  bitbucket-pipelines.yml  build-bidsapp.sh  build_bidsapp.sh  build_docs.sh  conda_packages_list.txt  conda_packages_list_linux64.txt  conda_packages_list_macosx.txt  crash-20170628-172057-localadmin-mr_crop_rois-7985a362-704c-4de6-b618-6a5621ab7801.pklz  environment.yml  environment_mac.yml  environment_macosx.yml  get_version.py  graph.dot  oldREADME.rst  run.py  run_connectomemapper3.py  setup.py  setup_cmp.py  setup_core.py  setup_deb.py  setup_gui.py  (+3 more)
.circleci/: config.yml  ds-sample_outputs.txt  ds-sample_test-03_outputs.txt  ds005_outputs.txt
anatomical_pipeline/: graph.json  graph1.json
cmp/: ._project.py  DTB_nipype.py  __init__.py  gui.py  info.py  input_validator.py  parser.py  project.py  run.py
cmp3/: gui.py
cmtklib/: ._parcellation.py  carbonfootprint.py  config.py  connectome.py  diffusion.py  eeg.py  functionalMRI.py  parcellation.py  process.py  report.py  util.py
conda/: environment.yml  environment_macosx.yml  environment_test.yml
config/: ref_anatomical_config.ini  ref_anatomical_config_2.ini  ref_anatomical_config_3.ini  ref_diffusion_config.ini  ref_diffusion_config_2.ini  ref_diffusion_config_4.ini
debian/: changelog  control  copyright  watch
dev/: test_MNE_IS_interface.py
diffusion_pipeline/: graph.json  graph1.json
docker/: environment.yml  requirements.txt  spec-file.txt
docs/: LICENSE.rst  Makefile  api_doc.rst  bidsappmanager.rst  changes.rst  citing.rst  cmpbids.rst  conf.py  conf.rst  contributing.rst  contributors.rst  datalad.rst  download.rst  exampleresults.rst  get_version.py  implementation.rst  index.rst  installation.rst  layout.html  notebooks.rst  outputs.rst  quality.rst  requirements.txt  runonhpc.rst  stages.rst  support.rst  usage.rst
documentation/: conf.py  conf.rst  download.rst  index.rst  installation.rst  make.bat  stages.rst
fMRI_pipeline/: graph.json  graph1.json
notebooks/: EEG pipeline demo.ipynb  analysis_tutorial.ipynb  analyze_connectivity.ipynb  construct_report_intermediate_steps_connectomemapper.ipynb  create_bids_parcellation_node_description_file.ipynb  create_graphml_parcellation_node_description_file.ipynb  custom_anatomical_input_grabber.ipynb  custom_config.json  start_bidsappmanager_from_notebook.ipynb  start_jupyter_notebook.sh  tutorial_environment.yml
ohbm-brainhack-2020/: Create_interfaces.ipynb  Forward_Model.ipynb  Untitled.ipynb  _electrode_reader.py  _montages.py  _tsv_handler.py  compute_forward_model_ds001-sample.ipynb  dFC_LOW_DIM_pipeline.ipynb  dFC_pipeline_ds001-sample.ipynb  eeg_source_analysis_ds001-sample.ipynb  eeg_source_analysis_ds002718-cmpeeg.ipynb  project_progress.md  py3EEGenvironment.yml  py3_mne_bids_CMP3.ipynb  test.ipynb
paper/: README.md  build_paper_docker.sh  paper.bib  paper.md
python3/: translation-log-root.txt  translation-log.txt
src/DTB/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/DTB/Applications/: CMakeLists.txt  Makefile  cmake_install.cmake
src/DTB/Applications/DTB_P0/: CMakeLists.txt  DTB_P0  Makefile  cmake_install.cmake  main.cxx
src/DTB/Applications/DTB_dtk2dir/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cxx
src/DTB/Applications/DTB_gfa/: CMakeLists.txt  DTB_gfa  Makefile  cmake_install.cmake  main.cxx
src/DTB/Applications/DTB_streamline/: CMakeLists.txt  DTB_streamline  Makefile  cmake_install.cmake  main.cxx
src/DTB/CMake/: FindBLITZ.cmake  FindNIFTI.cmake
src/DTB/Common/: NIFTI.h  TrackVis.h  streamline.h  utils.h
(+453 files in other folders)
