#####################################################################################
###############################  SUBPROJECTS  #######################################
#####################################################################################
ADD_SUBDIRECTORY( DTB_gfa )
ADD_SUBDIRECTORY( DTB_P0 )
ADD_SUBDIRECTORY( DTB_dtk2dir )
ADD_SUBDIRECTORY( DTB_streamline )


#####################################################################################
###################################  INSTALL  #######################################
#####################################################################################
INSTALL(FILES "${PROJECT_SOURCE_DIR}/Common/181_vecs.dat" DESTINATION ".")
